feat: 내가 참여한 모임 목록 API (#143)