@@ -12,7 +12,6 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -32,6 +31,6 @@ public class PartyController {
 
         return parties.stream()
                       .map(PartyListResponse::from)
-                      .collect(Collectors.toList());
+                      .toList();
     }
 }
